[package]
edition = "2021"
name = "web-rwkv-inspector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
clap = { version = "4.3", features = ["derive"] }
eframe = "0.27.2"
egui = "0.27.2"
half = { version = "2.2", features = ["bytemuck", "serde"] }
image = { version = "0.24", default-features = false, features = ["png"] }
itertools = "0.12"
flume = "0.11"
log = "0.4"
memmap2 = "0.9"
rfd = "0.13.0"
safetensors = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
simple_logger = { version = "4.2", features = ["stderr"] }
tokio = { version = "1.37", features = ["full"] }

[dependencies.web-rwkv]
path = "../web-rwkv"
