[package]
edition = "2021"
name = "web-rwkv-inspector"
version = "0.1.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["extern_crate_alloc"] }
cbor4ii = { version = "0.3.2", features = ["serde1"] }
clap = { version = "4.3", features = ["derive"] }
eframe = "0.29"
egui = { version = "0.29", features = ["default", "serde"] }
flume = "0.11"
half = { version = "2.2", features = ["bytemuck", "serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
itertools = "0.13"
log = "0.4"
memmap2 = "0.9"
rayon = "1.10.0"
rfd = "0.15"
safetensors = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.37", features = ["full"] }
uid = "0.1.7"

[dependencies.web-rwkv]
# path = "../web-rwkv"
version = "0.9.0"
